# image-stitching

./: .gitignore  CMakeLists.txt  README.md
bindings/: image_stitching.i  wrapper.hpp
cmake/: util.cmake
docs/: bindings.md  experiments.md  log.md  video_codec_sdk.md  warp.md
include/: stitcher.hpp  stream_helper.hpp  stream_provider.hpp  stream_writer.hpp  util.hpp  video_provider.hpp  warper.hpp
src/: main.cpp  stitcher.cpp  stitching_detailed.cpp  stream_provider.cpp  stream_writer.cpp  video_provider.cpp  warper.cpp
tests/: stitching_detailed.cpp  test_gst.cpp  test_python_bindings.py  test_stitch_images.cpp  test_stitch_videos.cpp  test_stitching_detailed.cpp  test_stitching_detailed_origianl.cpp  test_streams.cpp  test_videos.cpp  test_warp_perspective.cpp
utils/: color_segmentation.py  detect_qrcode.py
